2019 Aug 05 Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.5.2
* Bug fix: Exception when switching smart zoom level

2019 Jul 31 Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.5.1
* PlantUML diagram support for markdown
* Self protection against invalid custom terminal command line
* Bumping up the cdmcfparser version to 2.2.1
* Bumping up the cdmpyparser version to 3.1.1
* Bumping up the jedi library version to 0.14.1

2019 Apr 25 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.5.0
* Python 3.7 support
* New feature: support a floating independent window with flowchart renderer
* More on embedded documentation
* Bumping up the cdmcfparser version to 2.2.0
* Bumping up the cdmpyparser version to 3.1.0

2019 Mar 21 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.4.0
* Bumping up the magic library version to 0.4.15
* Introducing basic markdown rendering support
* Bug fix: proper file position is saved when an individual tab is closed
* Improved file type detection for some file types
* Bug fix: incorrect inital margin size when a new tab button is clicked
* Bumping up the jedi library version to 0.13.1
* Bumping up the radon library version to 2.4.0
* Fixing the flake8 version to 3.6.0
* Support embedded IDE documentation in Markdown
* Bug fix: running project profile instead of debug
* Bug fix: incorrect project file encoding detection if a file did not have an
  explicit encoding
* Bug fix: gprof2dot interface has been updated in a non-backward compatible
  manner

2018 Oct 02 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.3.1
* Bug fix: crash when a try else block is in an if branch and a mouse hovers it
* Downgrading pyflakes requirement to 1.6.0 due to an implicit dependency via
  radon->flake8_polyfill->flake8->pyflakes

2018 Sep 26 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 4.3.0
* Bump jedi version to 0.12.1
* Buffer cyclomatic complexity on-the-fly: status bar menu and margin marks